--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;1,300;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&family=Rubik:ital,wght@0,300;0,500;1,300;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root{
+  --font-navbar: 'Rubik', sans-serif;
+  --font-logo: 'DM Serif Display', serif;
+  --gradient-text: linear-gradient(89.97deg, blue, 1.84%, pink 20%);
+  --gradient-bar: linear-gradient(103.22deg, rgb(0, 255, 85), -13.86%, rgb(110, 20, 35) 20%);
+
+  --bg-color: #eee2e2;
+  --text-color: #fff;
+  --text-content: #000;
+  --text-headers: #EE4D47;
+}
+html{
+  font-size: 16px;
+}
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
