--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -7,11 +7,12 @@
 .header .logo{
     width: 212px;
     height: 50px;
-    margin: 50px 0 0 200px;
+    margin: 50px 5% 0 20%;
     font-family: var(--font-logo);
     font-size: 2rem;
     color: #fff;
     text-transform: uppercase;
+    flex-shrink:1;
 }
 .header .logo img{
     position: relative;
@@ -24,4 +25,9 @@
 }
 .header .logo span{
     margin-left: 5px;
+}
+@media screen and (max-width: 960px){
+    .header .logo{
+        margin: 50px 5% 0 10%;
+    }
 }
