--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,25 +2,25 @@
     height: 60px;
     width: 865px;
     align-self: flex-end;
+    flex-shrink:4;
 }
-.navbar ul{
-    height: inherit;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.navbar svg{
+    cursor: pointer;
 }
-.navbar ul li:last-child{
-    background-color: #EE4D47;
-    margin-right: 150px;
-    padding: 8px 8px 2px 8px;
-    max-width: 158px;
-    height: 40px;
-    border-radius: 6px;
+.navbar__mobile-menu{
+    display: none;
 }
-.navbar ul li a{
-    font-family: var(--font-navbar);
-    font-weight: bold;
-    color: #fff;
-    text-transform: uppercase;
+@media screen and (max-width: 960px){
+    .navbar{
+        display: flex;
+        justify-content: flex-end;
+    }
+    .navbar__mobile-menu{
+        display: block;
+        padding-top: .5rem;
+        width: 200px;
+    }
+    .navbar__mobile-menu svg{
+        margin-left: 80%;
+    }
 }
