--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -1,11 +1,10 @@
 .header{
     height: 7rem;
-    border: 1px solid #000;
     display: flex;
     justify-content: space-between;
 }
 .header .logo{
-    width: 212px;
+    width: 242px;
     height: 50px;
     margin: 50px 5% 0 20%;
     font-family: var(--font-logo);
@@ -15,6 +14,8 @@
     flex-shrink:1;
 }
 .header .logo img{
+    width:35px;
+    height:35px;
     position: relative;
     top: 5px;
     animation: wheel 5s linear 1s infinite normal both running;
