Base project color has been changed

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --gradient-text: linear-gradient(89.97deg, blue, 1.84%, pink 20%);
   --gradient-bar: linear-gradient(103.22deg, rgb(0, 255, 85), -13.86%, rgb(110, 20, 35) 20%);
 
-  --bg-color: #eee2e2;
+  --bg-color: #fbf5f5;
   --text-color: #fff;
   --text-content: #000;
   --text-headers: #EE4D47;
